# otus__django

./: Dockerfile  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml
otus_dj_pr/: .env  manage.py
otus_dj_pr/otus_dj_pr/: asgi.py  settings.py  urls.py  wsgi.py
otus_dj_pr/otus_dj_pr/settings/: base.py
otus_dj_pr/polls/migrations/: 0001_initial.py
otus_dj_pr/templates/admin/: base_site.html
