[tool.poetry]
name = "otus-django"
version = "0.1.0"
description = ""
authors = ["Евгений <evgeniy.moiseev.progr@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
django-debug-toolbar = "^4.4.6"
ruff = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
